@@ -1,3 +1,8 @@
+2004-10-05  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-prefs.c:
+	Handle NULL values from GConf (patch from Colin Walters).
+
 2004-09-30  Leonid Kanter <leon@asplinux.ru>
 
 	* configure.in: Added Russian "ru" to ALL_LINGUAS
